solved the button overlapping problem

--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -212,3 +212,10 @@
         width: 150px;
     }
 }
+@media (max-width: 400px) {
+
+    .view-cv,
+    .download-cv {
+        width: 120px;
+    }
+}
